--- a/less/category.less
+++ b/less/category.less
@@ -2,8 +2,7 @@
 
 	.topic-list {
 		margin-top: 10px;
-		overflow-x: hidden;
-		overflow-y: auto;
+		overflow: visible;
 	}
 
 	> ul {
@@ -180,9 +179,8 @@
 	position: fixed;
 	bottom: 10%;
 	right: 2rem;
-	z-index: 1;
+	z-index: 3;
 	.topics-section {
-		text-align: center;
 		max-height: 500px;
 		overflow-y: auto;
 	}
